--- a/doc/man/de/linkcheckerrc.5
+++ b/doc/man/de/linkcheckerrc.5
@@ -27,18 +27,22 @@ level margin: \\n[rst2man-indent\\n[rst2man-indent-level]]
 .\" new: \\n[rst2man-indent\\n[rst2man-indent-level]]
 .in \\n[rst2man-indent\\n[rst2man-indent-level]]u
 ..
-.TH "LINKCHECKERRC" "5" "Dezember 21, 2021" "10.0.1.post124+ga12fcf04" "LinkChecker"
+.TH "LINKCHECKERRC" "5" "Oktober 31, 2022" "10.1.0.post162+g614e84b5" "LinkChecker"
 .SH NAME
 linkcheckerrc \- Konfigurationsdatei für LinkChecker
 .SH BESCHREIBUNG
 .sp
-\fBlinkcheckerrc\fP ist die Konfigurationsdatei für LinkChecker. Die Datei ist in einem INI\-Format geschrieben. Die Standarddatei ist \fB~/.linkchecker/linkcheckerrc\fP unter Unix\-, \fB%HOMEPATH%\elinkchecker\elinkcheckerrc\fP unter Windows\-Systemen.
+\fBlinkcheckerrc\fP is the configuration file for LinkChecker. The file is
+written in an INI\-style format.
+The default file location is \fB$XDG_CONFIG_HOME/linkchecker/linkcheckerrc\fP
+or else \fB~/.config/linkchecker/linkcheckerrc\fP on Unix,
+\fB%HOMEPATH%\e.config\elinkchecker\elinkcheckerrc\fP on Windows systems.
 .SH EIGENSCHAFTEN
 .SS checking
 .INDENT 0.0
 .TP
 \fBcookiefile=\fP\fIDateiname\fP
-Lese eine Datei mit Cookie\-Daten. Das Cookie Datenformat wird in \fBlinkchecker(1)\fP erklärt. Kommandozeilenoption: \fB\-\-cookiefile\fP
+Lese eine Datei mit Cookie\-Daten. Das Cookie Datenformat wird in \fBlinkchecker(1)\fP erklärt. Kommandozeilenoption: \fI\%\-\-cookiefile\fP
 .TP
 \fBdebugmemory=\fP[\fB0\fP|\fB1\fP]
 Write memory allocation statistics to a file on exit, requires \fI\%meliae\fP\&.
@@ -49,16 +53,16 @@ Command line option: none
 Beachten Sie dass das angegebene Verzeichnis in URL\-Syntax sein muss, d.h. es muss einen normalen statt einen umgekehrten Schrägstrich zum Aneinanderfügen von Verzeichnissen benutzen. Und das angegebene Verzeichnis muss mit einem Schrägstrich enden. Kommandozeilenoption: none
 .TP
 \fBnntpserver=\fP\fISTRING\fP
-Gibt ein NNTP Rechner für \fBnews:\fP Links. Standard ist die Umgebungsvariable \fBNNTP_SERVER\fP\&. Falls kein Rechner angegeben ist, wird lediglich auf korrekte Syntax des Links geprüft. Kommandozeilenoption: \fB\-\-nntp\-server\fP
+Gibt ein NNTP Rechner für \fBnews:\fP Links. Standard ist die Umgebungsvariable \fI\%NNTP_SERVER\fP\&. Falls kein Rechner angegeben ist, wird lediglich auf korrekte Syntax des Links geprüft. Kommandozeilenoption: \fI\%\-\-nntp\-server\fP
 .TP
 \fBrecursionlevel=\fP\fINUMMER\fP
-Prüfe rekursiv alle URLs bis zu der angegebenen Tiefe. Eine negative Tiefe bewirkt unendliche Rekursion. Standard Tiefe ist unendlich. Kommandozeilenoption: \fB\-\-recursion\-level\fP
+Prüfe rekursiv alle URLs bis zu der angegebenen Tiefe. Eine negative Tiefe bewirkt unendliche Rekursion. Standard Tiefe ist unendlich. Kommandozeilenoption: \fI\%\-\-recursion\-level\fP
 .TP
 \fBthreads=\fP\fINUMMER\fP
-Generiere nicht mehr als die angegebene Anzahl von Threads. Die Standardanzahl von Threads ist 10. Um Threads zu deaktivieren, geben Sie eine nicht positive Nummer an. Kommandozeilenoption: \fB\-\-threads\fP
+Generiere nicht mehr als die angegebene Anzahl von Threads. Die Standardanzahl von Threads ist 10. Um Threads zu deaktivieren, geben Sie eine nicht positive Nummer an. Kommandozeilenoption: \fI\%\-\-threads\fP
 .TP
 \fBtimeout=\fP\fINUMMER\fP
-Setze den Timeout für TCP\-Verbindungen in Sekunden. Der Standard Timeout ist 60 Sekunden. Kommandozeilenoption: \fB\-\-timeout\fP
+Setze den Timeout für TCP\-Verbindungen in Sekunden. Der Standard Timeout ist 60 Sekunden. Kommandozeilenoption: \fI\%\-\-timeout\fP
 .TP
 \fBaborttimeout=\fP\fINUMMER\fP
 Time to wait for checks to finish after the user aborts the first
@@ -67,7 +71,7 @@ time (with Ctrl\-C or the abort button). The default abort timeout is
 Command line option: none
 .TP
 \fBuseragent=\fP\fISTRING\fP
-Gibt den User\-Agent an, der zu HTTP\-Servern geschickt wird, z.B. "Mozilla/4.0". Der Standard ist "LinkChecker/X.Y", wobei X.Y die aktuelle Version von LinkChecker ist. Kommandozeilenoption: \fB\-\-user\-agent\fP
+Gibt den User\-Agent an, der zu HTTP\-Servern geschickt wird, z.B. \(dqMozilla/4.0\(dq. Der Standard ist \(dqLinkChecker/X.Y\(dq, wobei X.Y die aktuelle Version von LinkChecker ist. Kommandozeilenoption: \fI\%\-\-user\-agent\fP
 .TP
 \fBsslverify=\fP[\fB0\fP|\fB1\fP|\fIfilename\fP]
 Falls der Wert Null ist werden SSL Zertifikate nicht überprüft. Falls er auf Eins gesetzt wird (der Standard) werden SSL Zertifikate mit der gelieferten CA Zertifikatsdatei geprüft. Falls ein Dateiname angegeben ist wird dieser zur Prüfung verwendet. Kommandozeilenoption: none
@@ -91,7 +95,11 @@ Command line option: none
 Maximale Anzahl von URLs die geprüft werden. Neue URLs werden nicht angenommen nachdem die angegebene Anzahl von URLs geprüft wurde. Kommandozeilenoption: none
 .TP
 \fBmaxrequestspersecond=\fP\fINUMMER\fP
-Limit the maximum number of requests per second to one host.
+Limit the maximum number of HTTP requests per second to one host.
+The average number of requests per second is approximately one third of the
+maximum. Values less than 1 and at least 0.001 can be used.
+To use values greater than 10, the HTTP server must return a
+\(dqLinkChecker\(dq response header.
 The default is 10.
 Command line option: none
 .TP
@@ -99,7 +107,7 @@ Command line option: none
 When using http, fetch robots.txt, and confirm whether each URL should
 be accessed before checking.
 The default is to use robots.txt files.
-Command line option: \fB\-\-no\-robots\fP
+Command line option: \fI\%\-\-no\-robots\fP
 .TP
 \fBallowedschemes=\fP\fINAME\fP[\fB,\fP\fINAME\fP\&...]
 Allowed URL schemes as comma\-separated list.
@@ -114,7 +122,7 @@ Command line option: none
 .INDENT 0.0
 .TP
 \fBignore=\fP\fIREGEX\fP (\fI\%MULTILINE\fP)
-Prüfe lediglich die Syntax von URLs, welche dem angegebenen regulären Ausdruck entsprechen. Kommandozeilenoption: \fB\-\-ignore\-url\fP
+Prüfe lediglich die Syntax von URLs, welche dem angegebenen regulären Ausdruck entsprechen. Kommandozeilenoption: \fI\%\-\-ignore\-url\fP
 .TP
 \fBignorewarnings=\fP\fINAME\fP[\fB,\fP\fINAME\fP\&...]
 Ignoriere die kommagetrennte Liste von Warnungen. Siehe \fI\%WARNINGS\fP für die Liste von erkannten Warnungen. Kommandozeilenoption: none
@@ -123,18 +131,18 @@ Ignoriere die kommagetrennte Liste von Warnungen. Siehe \fI\%WARNINGS\fP für di
 Regulärer Ausdruck, um mehr URLs als interne Verknüpfungen hinzuzufügen. Standard ist dass URLs der Kommandozeile als intern gelten. Kommandozeilenoption: none
 .TP
 \fBnofollow=\fP\fIREGEX\fP (\fI\%MULTILINE\fP)
-Prüfe URLs die auf den regulären Ausdruck zutreffen, aber führe keine Rekursion durch. Kommandozeilenoption: \fB\-\-no\-follow\-url\fP
+Prüfe URLs die auf den regulären Ausdruck zutreffen, aber führe keine Rekursion durch. Kommandozeilenoption: \fI\%\-\-no\-follow\-url\fP
 .TP
 \fBcheckextern=\fP[\fB0\fP|\fB1\fP]
 Check external links. Default is to check internal links only.
-Command line option: \fB\-\-check\-extern\fP
+Command line option: \fI\%\-\-check\-extern\fP
 .UNINDENT
 .SS authentication
 .INDENT 0.0
 .TP
 \fBentry=\fP\fIREGEX\fP \fIBENUTZER\fP [\fIPASSWORT\fP] (\fI\%MULTILINE\fP)
 Provide individual username/password pairs for different links. In
-addtion to a single login page specified with \fBloginurl\fP multiple
+addition to a single login page specified with \fBloginurl\fP multiple
 FTP, HTTP (Basic Authentication) and telnet links are supported.
 Entries are a triple (URL regex, username, password) or a tuple (URL
 regex, username), where the entries are separated by whitespace.
@@ -142,9 +150,9 @@ The password is optional and if missing it has to be entered at the
 commandline.
 If the regular expression matches the checked URL, the given
 username/password pair is used for authentication. The command line
-options \fB\-u\fP and \fB\-p\fP match every link and therefore override
+options \fI\%\-u\fP and \fI\%\-p\fP match every link and therefore override
 the entries given here. The first match wins.
-Command line option: \fB\-u\fP, \fB\-p\fP
+Command line option: \fI\%\-u\fP, \fI\%\-p\fP
 .TP
 \fBloginurl=\fP\fIURL\fP
 The URL of a login page to be visited before link checking. The page
@@ -172,12 +180,12 @@ form.
 .TP
 \fBfileoutput=\fP\fITYPE\fP[\fB,\fP\fITYPE\fP\&...]
 Output to a file \fBlinkchecker\-out.\fP\fITYPE\fP, or
-\fB$HOME/.linkchecker/failures\fP for the \fBfailures\fP output type.
+\fB$XDG_DATA_HOME/linkchecker/failures\fP for the \fBfailures\fP output type.
 Valid file output types are \fBtext\fP, \fBhtml\fP, \fBsql\fP, \fBcsv\fP,
 \fBgml\fP, \fBdot\fP, \fBxml\fP, \fBnone\fP or \fBfailures\fP\&. Default is no
 file output. The various output types are documented below. Note
 that you can suppress all console output with \fBoutput=none\fP\&.
-Command line option: \fB\-\-file\-output\fP
+Command line option: \fI\%\-\-file\-output\fP
 .TP
 \fBlog=\fP\fITYPE\fP[\fB/\fP\fIENCODING\fP]
 Specify the console output type as \fBtext\fP, \fBhtml\fP, \fBsql\fP, \fBcsv\fP,
@@ -186,26 +194,52 @@ is \fBtext\fP\&. The various output types are documented below.
 The \fIENCODING\fP specifies the output encoding, the default is that of
 your locale. Valid encodings are listed at
 \fI\%https://docs.python.org/library/codecs.html#standard\-encodings\fP\&.
-Command line option: \fB\-\-output\fP
+Command line option: \fI\%\-\-output\fP
 .TP
 \fBverbose=\fP[\fB0\fP|\fB1\fP]
-Falls gesetzt, gebe alle geprüften URLs einmal aus. Standard ist es, nur fehlerhafte URLs und Warnungen auszugeben. Kommandozeilenoption: \fB\-\-verbose\fP
+Falls gesetzt, gebe alle geprüften URLs einmal aus. Standard ist es, nur fehlerhafte URLs und Warnungen auszugeben. Kommandozeilenoption: \fI\%\-\-verbose\fP
 .TP
 \fBwarnings=\fP[\fB0\fP|\fB1\fP]
-Falls gesetzt, gebe keine Warnungen aus. Standard ist die Ausgabe von Warnungen. Kommandozeilenoption: \fB\-\-verbose\fP
+Falls gesetzt, gebe keine Warnungen aus. Standard ist die Ausgabe von Warnungen. Kommandozeilenoption: \fI\%\-\-verbose\fP
+.TP
+\fBignoreerrors=\fP\fIURL_REGEX\fP [\fIMESSAGE_REGEX\fP] (\fI\%MULTILINE\fP)
+Specify regular expressions to ignore errors for matching URLs, one
+per line. A second regular expression can be specified per line to
+only ignore matching error messages per corresponding URL. If the
+second expression is omitted, all errors are ignored. In contrast
+to \fI\%filtering\fP, this happens \fIafter\fP checking, which allows checking
+URLs despite certain expected and tolerable errors. Default is to
+not ignore any errors. Example:
+.UNINDENT
+.INDENT 0.0
+.INDENT 3.5
+.sp
+.nf
+.ft C
+[output]
+ignoreerrors=
+  ^https://deprecated\e.example\e.com ^410 Gone
+  # ignore all errors (no second expression), also for syntax check:
+  ^mailto:.*@example\e.com$
+.ft P
+.fi
+.UNINDENT
 .UNINDENT
 .SS Progress updates
 .INDENT 0.0
 .TP
 \fBstatus=\fP[\fB0\fP|\fB1\fP]
 Control printing URL checker status messages. Default is 1.
-Command line option: \fB\-\-no\-status\fP
+Command line option: \fI\%\-\-no\-status\fP
 .UNINDENT
 .SS Application
 .INDENT 0.0
 .TP
 \fBdebug=\fP\fISTRING\fP[\fB,\fP\fISTRING\fP\&...]
-Gebe Testmeldungen aus für den angegebenen Logger. Verfügbare Logger sind \fBcmdline\fP, \fBchecking\fP, \fBcache\fP, \fBdns\fP, \fBthread\fP, \fBplugins\fP und \fBall\fP\&. Die Angabe \fBall\fP ist ein Synonym für alle verfügbaren Logger. Kommandozeilenoption: \fB\-\-debug\fP
+Print debugging output for the given logger. Available debug
+loggers are \fBcmdline\fP, \fBchecking\fP, \fBcache\fP, \fBplugin\fP and \fBall\fP\&.
+\fBall\fP is an alias for all available loggers.
+Command line option: \fI\%\-\-debug\fP
 .UNINDENT
 .SS Quiet
 .INDENT 0.0
@@ -214,14 +248,14 @@ Gebe Testmeldungen aus für den angegebenen Logger. Verfügbare Logger sind \fBc
 If set, operate quiet. An alias for \fBlog=none\fP that also hides
 application information messages.
 This is only useful with \fBfileoutput\fP, else no results will be output.
-Command line option: \fB\-\-quiet\fP
+Command line option: \fI\%\-\-quiet\fP
 .UNINDENT
 .SH AUSGABETYPEN
 .SS text
 .INDENT 0.0
 .TP
 \fBfilename=\fP\fISTRING\fP
-Gebe Dateiname für Textausgabe an. Standard Dateiname ist \fBlinkchecker\-out.txt\fP\&. Kommandozeilenoption: \fB\-\-file\-output\fP
+Gebe Dateiname für Textausgabe an. Standard Dateiname ist \fBlinkchecker\-out.txt\fP\&. Kommandozeilenoption: \fI\%\-\-file\-output\fP
 .TP
 \fBparts=\fP\fISTRING\fP
 Kommagetrennte Liste von Teilen, die ausgegeben werden sollen. Siehe \fI\%LOGGER PARTS\fP weiter unten. Kommandozeilenoption: none
@@ -307,7 +341,12 @@ Siehe \fI\%[text]\fP Sektion weiter oben.
 Set CSV separator. Default is a semicolon (\fB;\fP).
 .TP
 \fBquotechar=\fP\fICHAR\fP
-Setze CSV Quotezeichen. Standard ist das doppelte Anführungszeichen (\fB"\fP).
+Setze CSV Quotezeichen. Standard ist das doppelte Anführungszeichen (\fB\(dq\fP).
+.TP
+\fBdialect=\fP\fISTRING\fP
+Controls the output formatting.
+See \fI\%https://docs.python.org/3/library/csv.html#csv.Dialect\fP\&.
+Default is \fBexcel\fP\&.
 .UNINDENT
 .SS sql
 .INDENT 0.0
@@ -409,7 +448,7 @@ Siehe \fI\%[text]\fP Sektion weiter oben.
 Eine Nummer zwischen 0.0 und 1.0, welche die Priorität festlegt. Die Standardpriorität für die erste URL ist 1.0, für alle Kind\-URLs ist sie 0.5.
 .TP
 \fBfrequency=\fP[\fBalways\fP|\fBhourly\fP|\fBdaily\fP|\fBweekly\fP|\fBmonthly\fP|\fByearly\fP|\fBnever\fP]
-Die Häufigkeit mit der Seiten sich ändern.
+How frequently pages are changing. Default is \fBdaily\fP\&.
 .UNINDENT
 .SH AUSGABE PARTS
 .INDENT 0.0
@@ -433,7 +472,7 @@ valid or invalid, with messages
 base href=...
 .TP
 \fBname\fP
-<a href=...>name</a> and <img alt="name">
+<a href=...>name</a> and <img alt=\(dqname\(dq>
 .TP
 \fBparenturl\fP
 if any
@@ -454,10 +493,10 @@ check time
 the original url name, can be relative
 .TP
 \fBintro\fP
-the blurb at the beginning, "starting at ..."
+the blurb at the beginning, \(dqstarting at ...\(dq
 .TP
 \fBoutro\fP
-the blurb at the end, "found x errors ..."
+the blurb at the end, \(dqfound x errors ...\(dq
 .UNINDENT
 .SH MULTILINE
 .sp
@@ -501,14 +540,9 @@ configuration file the plugin is enabled. Some plugins read extra
 options in their section.
 .SS AnchorCheck
 .sp
-Checks validity of HTML anchors.
-.sp
-\fBBEMERKUNG:\fP
-.INDENT 0.0
-.INDENT 3.5
-The AnchorCheck plugin is currently broken and is disabled.
-.UNINDENT
-.UNINDENT
+Checks validity of HTML anchors. When checking local files, URLs with anchors
+that link to directories e.g. \(dqexample/#anchor\(dq are not supported. There is no
+such limitation when using http(s).
 .SS LocationInfo
 .sp
 Adds the country and if possible city name of the URL host as info.
@@ -520,10 +554,10 @@ Definieren Sie einen regulären Ausdruck der eine Warnung ausgibt falls er auf d
 .TP
 \fBwarningregex=\fP\fIREGEX\fP
 Use this to check for pages that contain some form of error message,
-for example "This page has moved" or "Oracle Application error".
+for example \(dqThis page has moved\(dq or \(dqOracle Application error\(dq.
 \fIREGEX\fP should be unquoted.
 .sp
-Man beachte, dass mehrere Werte in dem regulären Ausdruck kombiniert werden können, zum Beispiel "(Diese Seite ist umgezogen|Oracle Applikationsfehler)".
+Man beachte, dass mehrere Werte in dem regulären Ausdruck kombiniert werden können, zum Beispiel \(dq(Diese Seite ist umgezogen|Oracle Applikationsfehler)\(dq.
 .UNINDENT
 .SS SslCertificateCheck
 .sp
@@ -552,7 +586,7 @@ Print HTTP headers in URL info.
 .TP
 \fBprefixes=\fP\fIprefix1\fP[,*prefix2*]...
 List of comma separated header prefixes. For example to display all
-HTTP headers that start with "X\-".
+HTTP headers that start with \(dqX\-\(dq.
 .UNINDENT
 .SS CssSyntaxCheck
 .sp
@@ -568,7 +602,7 @@ Dateiname von \fBclamd.conf\fP Konfigurationsdatei.
 .UNINDENT
 .SS PdfParser
 .sp
-Parse PDF files for URLs to check. Needs the \fI\%pdfminer\fP Python package
+Parse PDF files for URLs to check. Needs the \fI\%pdfminer.six\fP Python package
 installed.
 .SS WordParser
 .sp
@@ -587,6 +621,9 @@ Regular expression matching the names of Markdown files.
 Die folgenden Warnungen werden vom Konfigurationseintrag \(aqignorewarnings\(aq erkannt:
 .INDENT 0.0
 .TP
+\fBfile\-anchorcheck\-directory\fP
+A local directory with an anchor, not supported by AnchorCheck.
+.TP
 \fBfile\-missing\-slash\fP
 Der file: URL fehlt ein abschließender Schrägstrich.
 .TP
@@ -602,6 +639,9 @@ Ein Fehler trat auf während des Speicherns eines Cookies.
 \fBhttp\-empty\-content\fP
 Die URL besitzt keinen Inhalt.
 .TP
+\fBhttp\-rate\-limited\fP
+Too many HTTP requests.
+.TP
 \fBmail\-no\-mx\-host\fP
 Der MX Mail\-Rechner konnte nicht gefunden werden.
 .TP
@@ -616,6 +656,9 @@ Der URL Inhaltsgrößenangabe ist Null.
 .TP
 \fBurl\-content\-too\-large\fP
 Der URL Inhalt ist zu groß.
+.TP
+\fBurl\-content\-type\-unparseable\fP
+The URL content type is not parseable.
 .TP
 \fBurl\-effective\-url\fP
 Die effektive URL unterscheidet sich vom Original.
@@ -635,6 +678,6 @@ Die URL %(url)s enthält Leerzeichen am Anfang oder Ende.
 .SH AUTHOR
 Bastian Kleineidam <bastian.kleineidam@web.de>
 .SH COPYRIGHT
-2000-2016 Bastian Kleineidam, 2010-2021 LinkChecker Authors
+2000-2016 Bastian Kleineidam, 2010-2022 LinkChecker Authors
 .\" Generated by docutils manpage writer.
 .
